страницы отделка гостиной со слоями

--- a/src/finishing-furniture.html
+++ b/src/finishing-furniture.html
@@ -111,22 +111,22 @@
                                     <div class="swiper-wrapper">
                                         <div class="constructor-item _living-room1 swiper-slide">
                                             <div class="constructor-item__images">
-                                                <img class="_base" src="images/living-room1-base.jpg" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-floor1.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera1-living-room-floor2.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-floor3.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-floor4.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-floor5.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-floor6.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera1-living-room-wall1.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-wall2.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-wall3.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-wall4.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-wall5.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-wall6.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-wall7.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera1-living-room-top1.png" alt="">
-                                                <img class="constructor-image" src="images/camera1-living-room-top2.png" alt="">
+                                                <img class="_base" src="images/living-room1-furniture-base.jpg" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-floor1.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera1-living-room-furniture-floor2.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-floor3.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-floor4.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-floor5.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-floor6.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera1-living-room-furniture-wall1.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-wall2.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-wall3.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-wall4.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-wall5.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-wall6.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-wall7.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera1-living-room-furniture-top1.png" alt="">
+                                                <img class="constructor-image" src="images/camera1-living-room-furniture-top2.png" alt="">
                                             </div>
                                             <div class="constructor-item__dots">
                                                 <div class="constructor-item__dot _wall">
@@ -165,26 +165,26 @@
                                         </div>
                                         <div class="constructor-item _living-room2 swiper-slide">
                                             <div class="constructor-item__images">
-                                                <img class="_base" src="images/living-room2-base.jpg" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-floor1.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-floor2.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-floor3.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-floor4.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera2-living-room-floor5.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-floor6.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-wall1.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-wall2.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-wall3.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-wall4.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera2-living-room-wall5.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-wall6.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-wall7.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-top1.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera2-living-room-top2.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-door1.png" alt="">
-                                                <img class="constructor-image _active" src="images/camera2-living-room-door2.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-door3.png" alt="">
-                                                <img class="constructor-image" src="images/camera2-living-room-door4.png" alt="">
+                                                <img class="_base" src="images/living-room2-furniture-base.jpg" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-floor1.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-floor2.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-floor3.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-floor4.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera2-living-room-furniture-floor5.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-floor6.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-wall1.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-wall2.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-wall3.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-wall4.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera2-living-room-furniture-wall5.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-wall6.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-wall7.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-top1.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera2-living-room-furniture-top2.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-door1.png" alt="">
+                                                <img class="constructor-image _active" src="images/camera2-living-room-furniture-door2.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-door3.png" alt="">
+                                                <img class="constructor-image" src="images/camera2-living-room-furniture-door4.png" alt="">
                                             </div>
                                             <div class="constructor-item__dots">
                                                 <div class="constructor-item__dot _wall">
@@ -277,7 +277,7 @@
                                                 с мебелью
                                             </span>
                                             <label class="switcher">
-                                                <input type="checkbox">
+                                                <input type="checkbox" checked>
                                                 <div class="switcher__box">
                                                     <div class="switcher__dot"></div>
                                                 </div>
