--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,9 @@
                 <br><br>
                 <li><a href="category-backdrop.html">Бэкдроп Категория (пакеты)</a></li>
                 <br><br>
-                <li><a href="finishing.html">Отделка гостиная (c изменением ракурса)</a></li>
-                <li><a href="finishing.html">Отделка гостиная -пакет</a></li>
+                <li><a href="finishing.html">Отделка гостиная без МЕБЕЛИ (c изменением ракурса)</a></li>
+                <li><a href="finishing-furniture.html">Отделка гостиная c МЕБЕЛЬЮ (c изменением ракурса)</a></li>
+                <li><a href="finishing-living.html">Отделка гостиная -пакет</a></li>
                 <br><br>
                 <li><a href="finishing-wall.html">Мобильная версия страниц Обои</a></li>
                 <li><a href="finishing-floor.html">Мобильная версия страниц Ламинат</a></li>
