--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,16 @@
                 <li><a href="finishing-modal9.html">Модальное окно страницы Отделка</a></li>
                 <br><br>
                 <li><a href="checkout1.html">Checkout: ремонт под ключ</a></li>
+                <li><a href="checkout2.html">Checkout: материалы</a></li>
+                <li><a href="checkout3.html">Checkout: материалы + проект</a></li>
+                <li><a href="checkout4.html">Checkout: замерщик</a></li>
+                <li><a href="checkout5.html">Checkout: проект</a></li>
+                <br><br>
+                <li><a href="checkout-modal1.html">Checkout modal 1</a></li>
+                <li><a href="checkout-modal2.html">Checkout modal 2</a></li>
+                <li><a href="checkout-modal3.html">Checkout modal 3</a></li>
+                <li><a href="checkout-modal4.html">Checkout modal 4</a></li>
+                <li><a href="checkout-modal5.html">Checkout modal 5</a></li>
             </ul>
         </div>
     </div>
