--- a/src/filling.html
+++ b/src/filling.html
@@ -9,9 +9,9 @@
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
             <div class="constructor-wrapper">
-                <section class="filling">
+                <section class="constructor-section">
                     <div class="container">
-                        <div class="filling__inner wrapper-with-aside">
+                        <div class="wrapper-with-aside">
                             <aside class="aside-constructor">
                                 <ul class="aside-constructor__header">
                                     <li class="aside-constructor__header-item _complex">
