--- a/src/finishing-floor.html
+++ b/src/finishing-floor.html
@@ -111,7 +111,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="constructor-item _living-room1 swiper-slide">
                                             <div class="constructor-item__images">
-                                                <img src="images/living-room1-base.jpg" alt="">
+                                                <img class="_base" src="images/living-room1-base.jpg" alt="">
                                             </div>
                                             <div class="constructor-item__dots">
                                                 <div class="constructor-item__dot _wall">
@@ -150,7 +150,7 @@
                                         </div>
                                         <div class="constructor-item _living-room2 swiper-slide">
                                             <div class="constructor-item__images">
-                                                <img src="images/living-room2-base.jpg" alt="">
+                                                <img class="_base" src="images/living-room2-base.jpg" alt="">
                                             </div>
                                             <div class="constructor-item__dots">
                                                 <div class="constructor-item__dot _wall">
