правки страницы отделка, пакеты

--- a/src/finishing.html
+++ b/src/finishing.html
@@ -26,14 +26,14 @@
                                 </ul>
                                 <div class="aside-constructor__items">
                                     <div class="aside-constructor__item">
-                                        <div class="aside-constructor__item-title">
+                                        <div class="aside-constructor__item-title _active">
                                             Отделка
                                         </div>
                                         <div class="aside-constructor__item-price">
                                             <span>20 763 162</span> ₸ 
                                         </div>
                                     </div>    
-                                    <div class="aside-constructor__item _active">
+                                    <div class="aside-constructor__item">
                                         <div class="aside-constructor__item-title">
                                             Наполнение
                                         </div>
@@ -265,7 +265,7 @@
                                                        <img src="images/living-room.svg" alt="">
                                                    </div>
                                                     <div class="finishing__select-title">
-                                                        Гостинная
+                                                        Гостиная
                                                     </div>
                                                </div>
                                            </div>
