--- a/src/finishing-living.html
+++ b/src/finishing-living.html
@@ -25,7 +25,7 @@
                                     </li>
                                 </ul>
                                 <div class="aside-constructor__items">
-                                    <div class="aside-constructor__item">
+                                    <div class="aside-constructor__item _active">
                                         <div class="aside-constructor__item-title">
                                             Отделка
                                         </div>
@@ -33,7 +33,7 @@
                                             <span>20 763 162</span> ₸ 
                                         </div>
                                     </div>    
-                                    <div class="aside-constructor__item _active">
+                                    <div class="aside-constructor__item">
                                         <div class="aside-constructor__item-title">
                                             Наполнение
                                         </div>
@@ -119,7 +119,7 @@
                                                             Материалы
                                                         </div>
                                                         <div class="finishing__item-text">
-                                                            В завизимости от выбранного пакета
+                                                            В зависимости от выбранного пакета
                                                         </div>
                                                         <a href="#" class="finishing__item-more">
                                                             Подробнее
@@ -298,7 +298,7 @@
                                                        <img src="images/living-room.svg" alt="">
                                                    </div>
                                                     <div class="finishing__select-title">
-                                                        Гостинная
+                                                        Гостиная
                                                     </div>
                                                </div>
                                            </div>
