--- a/src/finishing-shower-door.html
+++ b/src/finishing-shower-door.html
@@ -25,7 +25,7 @@
                                     </li>
                                 </ul>
                                 <div class="aside-constructor__items">
-                                    <div class="aside-constructor__item">
+                                    <div class="aside-constructor__item _active">
                                         <div class="aside-constructor__item-title">
                                             Отделка
                                         </div>
@@ -33,7 +33,7 @@
                                             <span>20 763 162</span> ₸ 
                                         </div>
                                     </div>    
-                                    <div class="aside-constructor__item _active">
+                                    <div class="aside-constructor__item">
                                         <div class="aside-constructor__item-title">
                                             Наполнение
                                         </div>
@@ -231,7 +231,7 @@
                                                        <img src="images/living-room.svg" alt="">
                                                    </div>
                                                     <div class="finishing__select-title">
-                                                        Гостинная
+                                                        Гостиная
                                                     </div>
                                                </div>
                                            </div>
