попапы Отделка гостиная

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
                 <li><a href="finishing-furniture.html">Отделка гостиная c МЕБЕЛЬЮ (c изменением ракурса)</a></li>
                 <li><a href="finishing-living.html">Отделка гостиная -пакет</a></li>
                 <br><br>
+                <li><a href="finishing-popups.html">Отделка c открытием поп-апов</a></li>
+                <br><br>
                 <li><a href="finishing-wall.html">Мобильная версия страниц Обои</a></li>
                 <li><a href="finishing-floor.html">Мобильная версия страниц Ламинат</a></li>
                 <li><a href="finishing-floor-show.html">Мобильная версия страниц Ламинат</a></li>
