отдлека душ и гостиная с попапами и селектами

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
                 <li><a href="finishing-living.html">Отделка гостиная -пакет</a></li>
                 <br><br>
                 <li><a href="finishing-popups.html">Отделка c открытием поп-апов</a></li>
+                <li><a href="finishing-shower.html">Отделка Ванная c открытием поп-апов</a></li>
                 <br><br>
                 <li><a href="finishing-wall.html">Мобильная версия страниц Обои</a></li>
                 <li><a href="finishing-floor.html">Мобильная версия страниц Ламинат</a></li>
