поправлено расположение модалок в конструкторе

--- a/src/finishing-shower.html
+++ b/src/finishing-shower.html
@@ -648,7 +648,7 @@
                                         </div>
                                     </div>
                                     <div class="modals-section">
-                                        <div id="modal1" class="finishing-modal popup">
+                                        <div id="modal1" class="finishing-modal popup _floor">
                                             <button class="finishing-modal__close popup-close">
                                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M15.8333 5.34199L14.6583 4.16699L10 8.82533L5.34166 4.16699L4.16666 5.34199L8.825 10.0003L4.16666 14.6587L5.34166 15.8337L10 11.1753L14.6583 15.8337L15.8333 14.6587L11.175 10.0003L15.8333 5.34199Z" fill="#252525"/>
@@ -710,7 +710,7 @@
                                                 </button>
                                             </div>
                                         </div>
-                                        <div id="modal2" class="finishing-modal popup">
+                                        <div id="modal2" class="finishing-modal popup _right">
                                             <button class="finishing-modal__close popup-close">
                                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M15.8333 5.34199L14.6583 4.16699L10 8.82533L5.34166 4.16699L4.16666 5.34199L8.825 10.0003L4.16666 14.6587L5.34166 15.8337L10 11.1753L14.6583 15.8337L15.8333 14.6587L11.175 10.0003L15.8333 5.34199Z" fill="#252525"/>
@@ -835,7 +835,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div id="modal4" class="finishing-modal popup">
+                                        <div id="modal4" class="finishing-modal popup _right">
                                             <button class="finishing-modal__close popup-close">
                                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M15.8333 5.34199L14.6583 4.16699L10 8.82533L5.34166 4.16699L4.16666 5.34199L8.825 10.0003L4.16666 14.6587L5.34166 15.8337L10 11.1753L14.6583 15.8337L15.8333 14.6587L11.175 10.0003L15.8333 5.34199Z" fill="#252525"/>
